fix(ch0*): 「こと」をあまり使わないようにした

--- a/test/ch03.md
+++ b/test/ch03.md
@@ -13,7 +13,7 @@
 * グローバルナビゲーション
 * フッター
 
-これら共通構造にサイトの各ページへたどれるリンクを置くことで、どのページからもサイト内にあるページへ行くことができます。そのため今回のような多岐に渡る情報を提供するサイトでは、だいたいヘッダー・グローバルナビゲーション・フッターの3つがあります。
+これら共通構造にサイトの各ページへたどれるリンクを置くことで、どのページからもサイト内にあるページへ行けます。そのため今回のような多岐に渡る情報を提供するサイトでは、だいたいヘッダー・グローバルナビゲーション・フッターの3つがあります。
 
 またヘッダー・グローバルナビゲーション・フッターを使ったサイト構成は多く見られるため、訪問者も見慣れていることが期待できます。つまりどこに主となる情報があり、ナビゲーションはどこにあるか、初めてサイトへ来た人にも分かってもらえるという効果も期待できます。
 
@@ -32,7 +32,7 @@
 
 `body`要素内にはこのページの内容を書いていきます。`body`要素内にある`main`要素はサイトの主要な内容を示すものとなります。
 
-なお`main`要素で`role`属性の値に`main`を指定していますが、これはIE11がmain要素をサポートしていない[^html5semantic]ためです。そのため`role`属性で`main`を指定して、サイトの主要な内容だということをIE11にも伝える意図で指定しています。
+なお`main`要素で`role`属性の値に`main`を指定していますが、これはIE11がmain要素をサポートしていない[^html5semantic]ためです。そのため`role`属性で`main`を指定して、サイトの主要な内容ということをIE11にも伝える意図で指定しています。
 
 [^html5semantic]: http://caniuse.com/#feat=html5semantic
 
@@ -86,7 +86,7 @@
   </div>
 </header>
 ```
-作らないページについては、リスト3のように`a`要素の`href`属性に`#`を入れておきます。こうすることで、作っていないページの検索が楽になることを狙っています。
+作らないページについては、リスト3のように`a`要素の`href`属性に`#`を入れておきます。こうすることで、作っていないページの検索が楽になるのを狙っています。
 
 リスト3.3 作らないページはhref属性の値に#を入れておく
 ```
@@ -273,7 +273,7 @@ Bootstrapにはないクラス名を定義する際、リスト4のように`ll-
 ```
 ウィンドウ幅を狭めたときにグローバルナビゲーションの表示が崩れないよう、各ウィンドウ幅ごとにスタイルを定義しておきます。主に要素の内側の余白を細かく定義します（リスト10）。
 
-リスト3.10 ウィンドウ幅を狭めたときにグローバルナビゲーションの表示が崩れないようにする
+リスト3.10 ウィンドウ幅を狭めたときに表示が崩れないようにする
 ```
 /* グローバルナビゲーションの各ウィンドウ幅ごとのスタイル定義 */
 @media (min-width: 768px) {
@@ -309,7 +309,7 @@ Bootstrapにはないクラス名を定義する際、リスト4のように`ll-
 ```
 元のデザインに合わせるため、現在開いているページを示すセレクター（`.ll-active`）に対し、背景色や前景色を指定します。さらに選択できないことを示すため`cursor: default;`としてマウスカーソルの形を矢印にします。またリンクをマウスカーソルで押したらリンク先に飛ぶというマウスイベントが起こらないように、`pointer-events: none;`の指定でマウスイベント無効化をします（リスト11）。
 
-リスト3.11 グローバルナビゲーション上で現在見ているページはクリックできないようにする
+リスト3.11 現在見ているページはクリックできないようにする
 ```
 /* グローバルナビゲーション上で現在見ているページはクリックできないようにする */
 #ll-nav .ll-active > a {
