--- a/test/ch05.md
+++ b/test/ch05.md
@@ -30,11 +30,14 @@
 ```
 <div class="col-md-6">
   <h2 class="ll-video-title-and-artist">
-    <span class="ll-video-artist">μ's</span><span class="ll-video-title">Angelic Angel</span>
+    <span class="ll-video-artist">μ's</span>
+    <span class="ll-video-title">Angelic Angel</span>
   </h2>
 
   <div class="ll-live-video">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/oWIE7GwJu3c" frameborder="0" allowfullscreen></iframe>
+    <iframe width="560" height="315"
+    src="https://www.youtube.com/embed/oWIE7GwJu3c"
+    frameborder="0" allowfullscreen></iframe>
   </div>
 </div>
 ```
@@ -53,8 +56,11 @@
     <li><a href="">Settings</a></li>
   </ul>
 
-  <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/hashtag/%E3%83%A9%E3%83%96%E3%83%A9%E3%82%A4%E3%83%96" data-widget-id="620242924207386625">#ラブライブ のツイート</a>
-  <script id="twitter-wjs" src="https://platform.twitter.com/widgets.js" async></script>
+  <a class="twitter-timeline" data-dnt="true"
+  href="https://twitter.com/hashtag/%E3%83%A9%E3%83%96%E3%83%A9%E3%82%A4%E3%83%96"
+  data-widget-id="620242924207386625">#ラブライブ のツイート</a>
+  <script id="twitter-wjs" src="https://platform.twitter.com/widgets.js" async>
+  </script>
 </div>
 ```
 
@@ -113,11 +119,14 @@
     <div class="row">
       <div class="col-md-6">
         <h2 class="ll-video-title-and-artist">
-          <span class="ll-video-artist">μ's</span><span class="ll-video-title">Angelic Angel</span>
+          <span class="ll-video-artist">μ's</span>
+          <span class="ll-video-title">Angelic Angel</span>
         </h2>
 
-        <div class="ll-live-video">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/oWIE7GwJu3c" frameborder="0" allowfullscreen></iframe>
+        <div class="ll-live-vido">
+          <iframe width="560" height="315"
+          src="https://www.youtube.com/embed/oWIE7GwJu3c"
+          frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
 
@@ -129,8 +138,13 @@
           <li><a href="">Settings</a></li>
         </ul>
 
-        <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/hashtag/%E3%83%A9%E3%83%96%E3%83%A9%E3%82%A4%E3%83%96" data-widget-id="620242924207386625">#ラブライブ のツイート</a>
-        <script id="twitter-wjs" src="https://platform.twitter.com/widgets.js" async></script>
+        <a class="twitter-timeline" data-dnt="true"
+        href="https://twitter.com/hashtag/%E3%83%A9%E3%83%96%E3%83%A9%E3%82%A4
+        %E3%83%96"
+        data-widget-id="620242924207386625">#ラブライブ のツイート</a>
+        <script id="twitter-wjs" src="https://platform.twitter.com/widgets.js"
+        async>
+        </script>
       </div>
 
       <div class="col-md-3 col-sm-6 ll-livestage-ad">
@@ -169,7 +183,7 @@
 
 HTMLによるマークアップが終わったらCSSで見た目を整えていきます。はじめにライブステージページ全体へ関わるスタイルを適用します。
 
-ライブステージページの`main`要素に対し、要素の内側の余白を指定する`padding`や背景色を指定する`background-color`を指定することでライブステージページの見た目に近づけていきます。さらに見出しにもスタイルを適用することでサイトの見た目をアニメ版に近づけていきます（リスト7）。
+ライブステージページの`main`要素に対し、要素の内側の余白を指定する`padding`や背景色を指定する`background-color`を適用することでライブステージページの見た目に近づけていきます。さらに見出しにもスタイルを適用することでサイトの見た目をアニメ版に近づけていきます（リスト7）。
 
 リスト5.7 ライブステージページ全体を整えるCSS
 ```
