--- a/test/ch01.md
+++ b/test/ch01.md
@@ -24,21 +24,21 @@
 
 ### 要件定義をする理由
 
-最初に要件定義をすることで「これも入れたい」といった思いつきのアイデアに影響されず、作業が巻き戻ることを最小限に抑えられます。これにより、サイトをよりいいものにする作業へ時間を割くことができます。
+最初に要件定義をすれば「これも入れたい」といった思いつきのアイデアに影響されず、作業の巻き戻りを最小限に抑えられます。これにより、サイトをよりいいものにする作業へ時間を割けます。
 
 
 ### ラブライブ！参加者募集サイトの要件定義
 
 では実際に要件定義をしていきます。まずどんなサイトを作るかというところから始めます。今回は「ラブライブ！」というアイドルコンテストの参加者募集サイトを作ります。
 
-手順としてはまずターゲットユーザーを定義します。そしてターゲットユーザーにどんな体験を与えたいのか考えます。今回は主に見てもらいたいユーザーとして、スクールアイドルが挙げられます。この参加者募集サイトを見た後にスクールアイドルが応募してくれるような体験を作ることが大事です。
+手順としてはまずターゲットユーザーを定義します。そしてターゲットユーザーにどんな体験を与えたいのか考えます。今回は主に見てもらいたいユーザーとして、スクールアイドルが挙げられます。この参加者募集サイトを見た後にスクールアイドルが応募してくれるような体験を作るのが大事です。
 
-次に機能です。今回は工数やスケジュールを考えた結果、トップページとライブ中継ページの2ページのみ作ることにしました。このように期限と開発期間から現実的な範囲で判断することも要件定義の一部となります。
+次に機能です。今回は工数やスケジュールを考えた結果、トップページとライブ中継ページの2ページのみ作ることにしました。このように期限と開発期間から現実的な範囲で判断するのも要件定義の一部となります。
 
 
 ## 要素を整理する
 
-サイト内のボタンや画像、テキストなどさまざまな表示、動作する情報を「要素」と呼びます。どの要素をどの位置へ置くかは、設計者が最も合理的だと考えた場所になります。そのため要素を置く場所が合理的なのか判断するため、ターゲットユーザーの分析が必要となります。ユーザーが「最も合理的」と感じる方向に向かって、さまざまなことを考え設計するべきです。たとえば以下のことが考えられます。
+サイト内のボタンや画像、テキストなどさまざまな表示、動作する情報を「要素」と呼びます。どの要素をどの位置へ置くかは、設計者が最も合理的だと考えた場所になります。そのため要素を置く場所が合理的なのか判断するため、ターゲットユーザーの分析が必要となります。ユーザーが「最も合理的」と感じる方向に向かって、さまざまなことを考え設計するべきです。たとえば次のことが考えられます。
 
 
 * ターゲットユーザーがよく使いそうなボタンや機能をクリックしやすいところへ置く
@@ -46,7 +46,7 @@
 
 ### 今回の要素について整理
 
-アニメのキャプチャ画像（図1）から、サイトを構成する要素について分析してみます。
+図1のキャプチャ画像を元にサイトを構成する要素について分析してみます。
 
 
 ![トップページ（ラブライブ！第2期 1話より）© プロジェクトラブライブ！](images/ch01/lovelive-screenshot-top.jpg)
@@ -72,7 +72,7 @@
 
 #### LIVE STAGE
 
-ラブライブ！の状況をネットで生中継するページだと思われます。参加するアイドルグループが見る、OUTLINEやSCHEDULEより左に位置しています。これは一体どういうことでしょうか？これは参加するアイドルグループの他に、ライブをネット上で見るファンも大事という考えがあると思います。ライブステージページ内にある要素をアニメのキャプチャ画像から推測してみると、次の要素で構成されているように見えます。
+ラブライブ！の状況をネットで生中継するページだと思われます。参加するアイドルグループが見る、OUTLINEやSCHEDULEより左に位置しています。こうした理由は参加するアイドルグループの他に、ライブをネット上で見るファンも大事という考えがあります。ライブステージページ内にある要素をアニメのキャプチャ画像から推測してみると、次の要素で構成されているように見えます。
 
 
 * 映像タイトル
@@ -83,7 +83,7 @@
 * 投票
 * 広告スペース
 
-ここで最初に書いた要件定義を思い出しましょう。今回は「工数やスケジュールを考えた結果、トップページとライブ中継ページの2ページのみ作る」ということでした。つまり他のページについて要素整理は必要なく、ここで終わらせることができます。今回、どこまで資料が必要なのかは要件定義の段階で明確にしていました。そのため余計な作業はなくなり、効率的に開発を進めることができます。
+ここで最初に書いた要件定義を思い出しましょう。今回は「工数やスケジュールを考えた結果、トップページとライブ中継ページの2ページのみ作る」という要件でした。つまり他のページについて要素整理は必要なく、ここで終わらせられます。今回、どこまで資料が必要なのかは要件定義の段階で明確にしていました。そのため余計な作業はなくなり、効率的に開発を進められます。
 
 ここからは今回のサイトについて推測を書いていきます。よければ参考にしてください。
 
@@ -119,7 +119,7 @@
 
 ## サイトマップを作る
 
-サイトのページ数と階層を表示する図がサイトマップです。サイトマップは、サイトが何ページあるかということや、ページの関連性をひと目で見られます。それにより工数も推測できます。サイトマップを用意するとメリットがふたつあります。ひとつめに、ページ数が多いサイトの場合は制作スピードを上げられます。ふたつめに、ページ漏れのリスクも減らすことができます。
+サイトのページ数と階層を表示する図がサイトマップです。サイトマップは、サイトが何ページあるかという情報や、ページの関連性をひと目で見られます。それにより工数も推測できます。サイトマップを用意するとメリットがふたつあります。ひとつめに、ページ数が多いサイトの場合は制作スピードを上げられます。ふたつめに、ページ漏れのリスクも減らせます。
 
 サイトマップを書くとき、個人的に推奨するツールはExcelです。画像を作るイメージからPowerPointがいいと思う方もいるかもしれません。しかし実はセル結合や枠線を描画して作るほうが楽です。Excelがない場合はGoogle Driveのスプレッドシートも最低限な機能がそろっているので代用できます。作るときの心がけとして、階層を意識し外部リンクは明確に表示するよう作成するのをおすすめします。
 
@@ -139,15 +139,24 @@
 
 ワイヤーフレームはサイト内にある要素の種類・数・位置を示すものです。仕様書は要素の具体的な表示方法や演出をどうするか明記するものです。場合によっては、ワイヤーフレームと仕様書両方をまとめたり分けて書きます。
 
-サイトの内容が豊かであればあるほど仕様書も内容は多くなります。そのときは分けて書くことをおすすめします。また1ページごとにワイヤーフレームと仕様書は必要です。
+サイトの内容が豊かであればあるほど仕様書も内容は多くなります。そのときは分けて書きます。また1ページごとにワイヤーフレームと仕様書は必要です。
 
-ワイヤーフレームはPowerPointとExcelのどちらか好きなほうを使います。仕様書はExcelをおすすめします。ワイヤーフレームや仕様書は作る際に3つ気をつけたいことがあります。それらを、ひとつずつ解説していきます。
+ワイヤーフレームはPowerPointとExcelのどちらか好きなほうを使います。仕様書はExcelをおすすめします。ワイヤーフレームや仕様書は作る際に3つ気をつけることがあります。それらを、ひとつずつ解説していきます。
 
-はじめに気をつけることとして、要素は色もしくは形で分けるように書くことです。ワイヤーフレームの要素は大きく分けて画像・テキスト・ボタンの3種類に分けられます。さらに動作の要素を入れると、スクロールやポップアップなどがあります。これらを見分けがつくように分けて書くことをおすすめします。
 
-次に気をつけることとして、ワイヤーフレームに余計な情報を入れないということです。ワイヤーフレームはあくまで要素がページ内のどこにあるか示す資料です。そのため色など不要な情報はなるべく入れないほうがいいです。なぜならデザイナーはグラフィックとUIの制作に、参考資料としてワイヤーフレームを使うためです。余計な情報があると資料は分かりづらくなり混乱を招きます。グラフィックやUIの方向性を決めるのはアートディレクターの仕事なので、企画資料としては見やすいようにすることが最優先です。
+### 要素は色もしくは形で分けて書く
 
-最後に気をつけることとして、仕様書は箇条書きにすることです。それぞれの要素や動作に対して、箇条書きする必要があります。仕様書を見るエンジニアにとって不明な点がない状態でコーディングできるよう目指します。
+ワイヤーフレームの要素は大きく分けて画像・テキスト・ボタンの3種類に分けられます。さらに動作の要素を入れると、スクロールやポップアップなどがあります。これらを見分けがつくように分けて書きます。
+
+
+### ワイヤーフレームに余計な情報を入れない
+
+ワイヤーフレームはあくまで要素がページ内のどこにあるか示す資料です。そのため色など不要な情報はなるべく入れないほうがいいです。なぜならデザイナーはグラフィックとUIの制作に、参考資料としてワイヤーフレームを使うためです。余計な情報があると資料は分かりづらくなり混乱を招きます。グラフィックやUIの方向性を決めるのはアートディレクターの仕事なので、企画資料としては見やすいようにします。
+
+
+### 仕様書は箇条書きにする
+
+それぞれの要素や動作に対して、箇条書きする必要があります。仕様書を見るエンジニアにとって不明な点がない状態でコーディングできるよう目指します。
 
 
 ## 今回のワイヤーフレームと仕様書について
@@ -162,13 +171,15 @@
 
 ![トップページ（ラブライブ！第2期 1話より）© プロジェクトラブライブ！](images/ch01/lovelive-screenshot-top-02.jpg)
 
-トップページで訴求したいことは以下のふたつになると思います。これは華やかな画像をいっぱい見られるようにする意図があると思われます。
+トップページで訴求したいことは次のふたつになると思います。これは華やかな画像をいっぱい見られるようにする意図があると思われます。
 
 
 * コンテストの盛り上がり
 * 歴代受賞者の宣伝
 
-画像の表示方法はカルーセルということが分かります。カルーセルは[Nike](http://www.nike.com/jp/ja_jp/)などで使われている「注目させたい複数の画像などをつぎつぎと横にスライド表示する」ものです。
+画像の表示方法はカルーセルということが分かります。カルーセルはNike[^nike]などで使われている「注目させたい複数の画像などをつぎつぎと横にスライド表示する」ものです。
+
+[^nike]: http://www.nike.com/jp/ja_jp/
 
 またアニメのキャプチャ画像を見ると共通フッター内にはカルーセルと連携しそうなドットがあります。しかしこの見た目は現実だと採用される可能性が極めて低いものです。ライブステージページもドットが共通フッター内にあります。これも映像を見るページで普通こういう表示はしません。そのため考えた結果として、トップページだけ画像をカルーセルで表示するようにしました。これらをまとめたのが図5となります。
 
@@ -219,7 +230,10 @@
 
 なおライセンスファイルが置いてある場合でもGPLライセンスの場合は注意します。理由はライブラリに独自の改変を加えた際、GPLライセンスでソースコード公開が必要なためです。MITライセンスや修正BSDライセンスについては、作者の名前を書いておけば問題ありません。
 
-「サイト制作のSTART:DASH!!」ではソースコード部分をMITライセンスで提供しています。そのためこの本に出てくるソースコードはMITライセンスである旨と`Copyright (c) 2015 O2 Project`という著作権を表示すれば自由に使うことができます。ただしMITライセンスの特性上、ソースコードを使ったことによる責任は負いません。
+
+### 「サイト制作のSTART:DASH!!」のライセンスについて
+
+「サイト制作のSTART:DASH!!」ではソースコード部分をMITライセンスで提供しています。そのためこの本に出てくるソースコードはMITライセンスである旨と`Copyright　(c)　2015　O2　Project`という著作権を表示すれば自由に使えます。ただしMITライセンスの特性上、ソースコードを使うことによる責任は負いません。
 
 
 ### 著作権
@@ -236,7 +250,9 @@
 
 [^trace]: http://www.bengo4.com/houmu/17/1263/n_3282/
 
-なおこの「サイト制作のSTART:DASH!!」は文章部分をクリエイティブ・コモンズの表示・非営利・継承4.0国際ライセンスで提供しています。このライセンスは次の3つを満たすことにより文章部分を自由に使うことができます。
+### 「サイト制作のSTART:DASH!!」の著作権について
+
+「サイト制作のSTART:DASH!!」は文章部分をクリエイティブ・コモンズの表示・非営利・継承4.0国際ライセンスで提供しています。このライセンスは次の3つを満たせば文章部分を自由に使えます。
 
 
 * 著作権を表示する
@@ -249,9 +265,12 @@
 
 [^creative-commons-article]: http://liskul.com/cr_ccnotrouble-4194
 
+なお画像については特に著作権について言及していません。理由はプロジェクトラブライブ！が著作者となっている画像と、自分達が著作者となっている画像が混ざっているため、一律で画像をどのように使っていいのか決められないためです。
+
+
 ### イラストや素材を自作できない場合どうしたらいいか？
 
-とはいえ、イラストや素材を自作できない場合、サイトが殺風景な見た目になりがちです。その場合は写真素材サイトを使うことで解決できます。写真素材サイトの一例として次のサイトがあります。
+イラストや素材を自作できない場合、サイトが殺風景な見た目になりがちです。その場合は写真素材サイトを使えば解決できます。ただし写真を使うときは各写真素材サイトの注意項目を読んだ上で、それに沿って使う必要があります。写真素材サイトの一例として次のサイトがあります。
 
 
 * ぱくたそ[^pakutaso]
@@ -266,6 +285,4 @@
 [^girlydrop]: http://girlydrop.com/
 
 [^tadapic]: http://www.tadapic.com/
-
-写真素材サイトを使うことで、高品質な写真が使えます。ただし写真を使うときは各写真素材サイトの注意項目を読んだ上で、それに沿って使う必要があります。
 
