--- a/test/ch02.md
+++ b/test/ch02.md
@@ -1,4 +1,3 @@
-
 # サイト開発の準備
 
 この章ではラブライブ！参加者募集サイトを実装する前の準備について書きます。
@@ -6,7 +5,7 @@
 
 ## 必要なツールの準備
 
-はじめに、ラブライブ！参加者募集サイトの実装で必要なツールを準備します。最低限必要なものを列挙していくと以下のものがあります。
+はじめに、ラブライブ！参加者募集サイトの実装で必要なツールを準備します。最低限必要なものを列挙していくと次のものがあります。
 
 
 * ソースコードを書くためのエディターもしくはIDE
@@ -18,7 +17,7 @@
 
 ### エディターもしくはIDE
 
-はじめに、ソースコードを書くためのエディターもしくはIDE（統合開発環境）を用意します。エディターとIDEですが、エディターはIDEと比べて自分で設定できる部分が多いです。そのため拡張性はエディターのほうが高いです。その分エディターの設定に時間がかかってしまうこともあります。IDEはインストールしたときからある程度の設定がされています。その代わりエディターと比べて拡張性は低いです。
+はじめに、ソースコードを書くためのエディターもしくはIDE（統合開発環境）を用意します。エディターとIDEですが、エディターはIDEと比べて自分で設定できる部分が多いです。そのため拡張性はエディターのほうが高いです。その分エディターの設定に時間がかかります。IDEはインストールしたときからある程度の設定がされています。その代わりエディターと比べて拡張性は低いです。
 
 なのでより自分好みの設定にしたい場合はエディターを、設定をいろいろいじるのが面倒な場合はIDEを使うといいです。
 
@@ -51,7 +50,7 @@
 
 ### GitとGitHub
 
-最後に、作業履歴を管理するためGitとGitHubを使います。たとえば突然PCがブルースクリーンになってしまい、予期しないシャットダウンをしなければいけなくなったとします。そのときGitに作業履歴が残っていれば、かなり前の作業まで遡ってしまうことが少なくなります。GitはSourceTree[^sourcetree]をダウンロードして使うのがいいでしょう。もしGitについてあまり知らない場合は、拙著のSteins;Git[^steinsgit]を読んでみてください。
+最後に、作業履歴を管理するためGitとGitHubを使います。たとえば突然PCがブルースクリーンになってしまい、予期しないシャットダウンをしなければいけなくなったとします。そのときGitに作業履歴が残っていれば、かなり前の作業まで遡ることが少なくなります。GitはSourceTree[^sourcetree]をダウンロードして使うのがいいでしょう。もしGitについてあまり知らない場合は、拙著のSteins;Git[^steinsgit]を読んでみてください。
 
 [^sourcetree]: https://ja.atlassian.com/software/sourcetree/overview
 
@@ -70,15 +69,27 @@
 
 まずは検索します。検索したときに結果が出やすい手法はいくつかあります。
 
-はじめに「CSSで背景色をつけるやり方」と検索するより、「CSS 背景色 やり方」のように単語で区切るほうが検索結果の件数は増えます。検索エンジンは「CSSで背景色をつけるやり方」のような文章が苦手です。そのため文章よりも単語ごとに区切ったほうが検索結果の件数は増えます。
 
-また、より入門的な内容を探したい場合「○○ とは」で検索するのがいいです。理由は入門的な記事のタイトルが「○○ とは」と書く傾向にあるためです。たとえばJavaScriptの初心者向け記事を探したい場合は「JavaScript とは」といった感じで検索します。
+#### 単語で区切る
 
-次に、JavaScriptでエラーメッセージが出力された場合、エラーメッセージをそのまま検索することです。エラーメッセージをそのまま検索することで、解決方法が出てきやすいです。しかしだいたい英語なので、そこは頑張って内容を読み取るしかないです。
+「CSSで背景色をつけるやり方」と検索するより、「CSS 背景色 やり方」のように単語で区切るほうが検索結果の件数は増えます。検索エンジンは「CSSで背景色をつけるやり方」のような文章が苦手です。そのため文章よりも単語ごとに区切ったほうが検索結果の件数は増えます。
 
-最後に、Google検索結果内の「検索ツール - 期間指定」を使ってなるべく新しい情報のみ検索します。CSSやJavaScriptは2011年以前の情報があまり役に立ちません。期間を絞ることで新しい情報にたどりつきやすくします。
 
-しかし、初期状態では期間設定の使い勝手があまりよくありません。具体的には期間設定が「1ヶ月」の後は「1年」となってしまうため「3ヶ月以内」などは指定できません。これに関してはAdd Search Options[^search-options]というGoogle Chrome拡張機能を使います。この拡張機能を使うことにより、期間指定に「3ヶ月以内」と「6ヶ月以内」が増えます。
+#### 「○○ とは」で検索する
+
+より入門的な内容を探したい場合「○○ とは」で検索するのがいいです。理由は入門的な記事のタイトルが「○○ とは」と書く傾向にあるためです。たとえばJavaScriptの初心者向け記事を探したい場合は「JavaScript とは」といった感じで検索します。
+
+
+#### エラーメッセージで検索する
+
+JavaScriptでエラーメッセージが出力された場合、エラーメッセージをそのまま検索すれば解決方法が出てきやすいです。しかし大部分が英語のため、そこは頑張って内容を読み取るしかないです。
+
+
+#### 期間を指定して検索する
+
+Google検索結果内の「検索ツール - 期間指定」を使ってなるべく新しい情報のみ検索します。CSSやJavaScriptは2011年以前の情報があまり役に立ちません。そのため、期間を絞り新しい情報にたどりつきやすくします。
+
+しかし、初期状態では期間設定の使い勝手があまりよくありません。具体的には期間設定が「1ヶ月」の後は「1年」となってしまうため「3ヶ月以内」などは指定できません。これに関してはAdd Search Options[^search-options]というGoogle Chrome拡張機能を使います。この拡張機能を使えば、期間指定に「3ヶ月以内」と「6ヶ月以内」が増えます。
 
 [^search-options]: https://chrome.google.com/webstore/detail/add-search-options/kaifgnoibnjldmdkkfogenbfbfgcbiao
 
@@ -86,7 +97,7 @@
 
 検索をしてもいい情報に巡りあえないことがあります。その場合、周りに聞ければ聞いたほうがいいです。
 
-聞く前にまずは検索したり問題の概要をまとめます。これにより聞く側にとらせる時間が少なくなります。聞き方としてはおそらく解答にかかるであろう時間を予測して、「『○○』について聞きたいのですが、×分ほど時間はありますか」と聞くのがいいです。この「○○」に入る言葉は、たとえば「ある機能の実装方法」ということが入ると思います。
+聞く前にまずは検索したり問題の概要をまとめます。これにより聞く側にとらせる時間が少なくなります。聞き方としてはおそらく解答にかかるであろう時間を予測して、「『○○』について聞きたいのですが、×分ほど時間はありますか」と聞くのがいいです。この「○○」に入る言葉は、たとえば「ある機能の実装方法」が入ると思います。
 
 また聞く相手を間違えないようにします。たとえばプログラムのことをエンジニア以外に聞いても、ほとんどの場合は求める回答が返ってこないと思います。
 
@@ -151,14 +162,14 @@
 
 [^jquery-amazon]: Amazonの「jQuery」の検索結果：http://www.amazon.co.jp/s/field-keywords=jquery
 
-このように、利用実績やライブラリについて本が書かれているかということをまず見ます。
+このように、利用実績やライブラリについて本が書かれているかという視点でまず見ます。
 
 
 #### IssueやPull Request、最新コミット日時
 
 次に、GitHub上にあるIssueやPull Requestの件数と最新コミット日時です。利用実績で見るのは公開されてからある程度時間が経過し、広く使われるようになったライブラリのみ使える判断材料です。つまり定番と言われるライブラリに対してのみ判断材料として使えます。
 
-そこでIssueやPull Requestの件数と最新コミット日時を見ます。たとえば最新コミット日が6か月前だった場合、IssueやPull Requestの多さは「放置されているから」ということになります。放置されたライブラリを使う場合、自分達でなんとかしないといけなくなる場面が増えてしまいます。
+そこでIssueやPull Requestの件数と最新コミット日時を見ます。たとえば最新コミット日が6か月前だった場合、IssueやPull Requestの多さは「放置されているから」という理由になります。放置されたライブラリを使う場合、自分達でなんとかしないといけなくなる場面が増えてしまいます。
 
 自分達でなんとかするのであればいいですが、そうでない場合は活発なライブラリを選ぶのがいいです。
 
@@ -194,7 +205,7 @@ flipsnap.jsはドキュメントに次の項目がよくまとまっています
 
 [^nico]: http://nico.kubosho.com/
 
-選定した理由としては、今回デザイナーがいない中ラブライブ！参加者募集サイトの見た目をアニメに近づけたいという思いがありました。ラブライブ！参加者募集サイトは、Bootstrapを使って作られたサイトの見た目に似ているためBootstrapを使うことにしました。
+選定した理由としては、今回デザイナーがいない中ラブライブ！参加者募集サイトの見た目をアニメに近づけたいという思いがありました。ラブライブ！参加者募集サイトは、Bootstrapを使って作られたサイトの見た目に似ているためBootstrapを使うようにしました。
 
 ラブライブ！参加者募集サイトはピンク系の配色なのですが、Bootstrap本体はピンク系の配色ではありません。なので今回のためにHonokaというBootstrapテーマ[^honoka]を元に、NicoというBootstrapのテーマを作りました。
 
@@ -215,7 +226,7 @@ NicoはGitHubからダウンロードします。`https://github.com/kubosho/Nic
 
 [^slick]: http://kenwheeler.github.io/slick/
 
-選定した理由は2つあります。ひとつめとして、ドキュメントがそろっておりカルーセルを実装するときに困らないためです。これによりやりたいことがすぐ実現できます。ふたつめとして、slickは開発が活発なことです。ただ互換性がない更新も起こるので最新版に更新する際は注意が必要です。
+選定した理由は2つあります。ひとつめとして、ドキュメントがそろっておりカルーセルを実装するときに困らないためです。これによりやりたいことがすぐ実現できます。ふたつめとして、slickは開発が活発なためです。ただ互換性がない更新も起こるので最新版に更新する際は注意が必要です。
 
 それではslickをダウンロードします。`http://kenwheeler.github.io/slick/`にアクセスしたらページ上部の「get it now」をクリックします。すると「Download Now」というボタンが表示されるのでボタンをクリックします（図2）。するとzipファイルがダウンロードされるので、zipを展開して中のファイルを`external`ディレクトリー内に入れておきます。
 
