fix(ch0*): 「のように」をなるべく使わないようにした

--- a/test/ch01.md
+++ b/test/ch01.md
@@ -12,7 +12,7 @@
 * どんなサイトを作るか
 * どんな機能が必要か
 
-要件定義するときは次のように自問自答をすると、どんなサイトを作りどの機能が必要か導けます。
+要件定義するときは次のとおり自問自答をすると、どんなサイトを作りどの機能が必要か導けます。
 
 
 * 質問：どんなサイトを作る？
@@ -72,7 +72,7 @@
 
 #### LIVE STAGE
 
-ラブライブ！の状況をネットで生中継するページだと思われます。参加するアイドルグループが見る、OUTLINEやSCHEDULEより左に位置しています。こうした理由は参加するアイドルグループの他に、ライブをネット上で見るファンも大事という考えがあります。ライブステージページ内にある要素をアニメのキャプチャ画像から推測してみると、次の要素で構成されているように見えます。
+ラブライブ！の状況をネットで生中継するページだと思われます。参加するアイドルグループが見る、OUTLINEやSCHEDULEより左に位置しています。こうした理由は参加するアイドルグループの他に、ライブをネット上で見るファンも大事という考えがあります。ライブステージページ内にある要素をアニメのキャプチャ画像から推測してみると、次の要素で構成されています。
 
 
 * 映像タイトル
@@ -151,7 +151,7 @@
 
 ### ワイヤーフレームに余計な情報を入れない
 
-ワイヤーフレームはあくまで要素がページ内のどこにあるか示す資料です。そのため色など不要な情報はなるべく入れないほうがいいです。なぜならデザイナーはグラフィックとUIの制作に、参考資料としてワイヤーフレームを使うためです。余計な情報があると資料は分かりづらくなり混乱を招きます。グラフィックやUIの方向性を決めるのはアートディレクターの仕事なので、企画資料としては見やすいようにします。
+ワイヤーフレームはあくまで要素がページ内のどこにあるか示す資料です。そのため色など不要な情報はなるべく入れないほうがいいです。なぜならデザイナーはグラフィックとUIの制作に、参考資料としてワイヤーフレームを使うためです。余計な情報があると資料は分かりづらくなり混乱を招きます。グラフィックやUIの方向性を決めるのはアートディレクターの仕事なので、企画資料としては見やすくします。
 
 
 ### 仕様書は箇条書きにする
@@ -171,7 +171,7 @@
 
 ![トップページ（ラブライブ！第2期 1話より）© プロジェクトラブライブ！](images/ch01/lovelive-screenshot-top-02.jpg)
 
-トップページで訴求したいことは次のふたつになると思います。これは華やかな画像をいっぱい見られるようにする意図があると思われます。
+トップページで訴求したいことは次のふたつになると思います。これは華やかな画像をいっぱい見ることができる意図があると思われます。
 
 
 * コンテストの盛り上がり
@@ -226,7 +226,7 @@
 
 ### ライセンス
 
-はじめにソースコードのライセンスです。GitHub上にあるライブラリはだいたいライセンス情報を書いたファイルが置かれています。ライセンスファイルが置かれていないライブラリは使わないようにします。理由は今後どんなライセンスが適用されるか分からないという理由と、作者が再利用されたくないという意志の元、ライセンスファイルを置いていない可能性があるためです。
+はじめにソースコードのライセンスです。GitHub上にあるライブラリはだいたいライセンス情報を書いたファイルが置かれています。ライセンスファイルが置かれていないライブラリは使いません。理由は今後どんなライセンスが適用されるか分からないという理由と、作者が再利用されたくないという意志の元、ライセンスファイルを置いていない可能性があるためです。
 
 なおライセンスファイルが置いてある場合でもGPLライセンスの場合は注意します。理由はライブラリに独自の改変を加えた際、GPLライセンスでソースコード公開が必要なためです。MITライセンスや修正BSDライセンスについては、作者の名前を書いておけば問題ありません。
 
