--- a/test/ch05.md
+++ b/test/ch05.md
@@ -7,7 +7,7 @@
 
 ## main要素にライブステージページと分かるようなIDを付ける
 
-はじめに`main`要素へライブステージページと分かるようなIDを次のように付けます。
+はじめに`main`要素へライブステージページと分かるようなIDを次のとおりに付けます。
 
 リスト5.1 main要素にライブステージページと分かるようなIDを付ける
 ```
