write(ch0*): ページ数調整（68P）

--- a/test/ch03.md
+++ b/test/ch03.md
@@ -244,9 +244,9 @@ Bootstrapにはないクラス名を定義する際、リスト4のように`ll-
 
 ## グローバルナビゲーションの見た目をよくする
 
-グローバルナビゲーションへスタイルを適用します。グローバルナビゲーションは、Bootstrapのスタイル定義をそのまま使った場合、高さがそれなりにあります。これをラブライブ！参加者募集サイトの見た目に合わせるため、`min-height: 0;`と指定して、グローバルナビゲーションの高さを狭めておきます。
+グローバルナビゲーションへスタイルを適用します。Bootstrapのスタイル定義をそのまま使った場合、グローバルナビゲーションは高さがあります。これをラブライブ！参加者募集サイト用に、`min-height: 0;`と指定して、グローバルナビゲーションの高さを狭めておきます。
 
-今回のラブライブ！参加者募集サイトは、全て大文字でグローバルナビゲーション内の文字が書かれています。そのためグローバルナビゲーション内の各要素に対し`text-transform: uppercase;`と指定して、グローバルナビゲーション内の文字を全て大文字にします。他のスタイル定義に関しては、Bootstrapで定義されているスタイルを打ち消すための指定となります（リスト9）。
+またグローバルナビゲーション内の文字が全て大文字で書かれています。そのためグローバルナビゲーション内の要素に対し`text-transform: uppercase;`と指定して、文字を全て大文字にします。他のスタイル定義に関しては、Bootstrapで定義されているスタイルを打ち消すための指定となります（リスト9）。
 
 リスト3.9 グローバルナビゲーションのCSS
 ```
@@ -307,7 +307,7 @@ Bootstrapにはないクラス名を定義する際、リスト4のように`ll-
   }
 }
 ```
-元のデザインに合わせるため、現在開いているページを示すセレクター（`.ll-active`）に対し、背景色や前景色を指定します。さらに選択できないことを示すため`cursor: default;`としてマウスカーソルの形を矢印にします。またリンクをマウスカーソルで押したらリンク先に飛ぶというマウスイベントが起こらないように、`pointer-events: none;`の指定でマウスイベント無効化をします（リスト11）。
+元のデザインに合わせるため、現在開いているページを示すセレクター（`.ll-active`）に対し背景色や前景色を指定します。さらにリンクをマウスカーソルで押したらリンク先に飛ぶというマウスイベントが起こらないよう、`pointer-events: none;`の指定でマウスイベント無効化をします（リスト11）。最後に選択できないことを示すため`cursor: default;`としてマウスカーソルの形を矢印にします。
 
 リスト3.11 現在見ているページはクリックできないようにする
 ```
