fix(ch0*): 二重助詞を解消

--- a/test/ch01.md
+++ b/test/ch01.md
@@ -171,7 +171,7 @@
 
 ![トップページ（ラブライブ！第2期 1話より）© プロジェクトラブライブ！](images/ch01/lovelive-screenshot-top-02.jpg)
 
-トップページで訴求したいことは次のふたつになると思います。これは華やかな画像をいっぱい見ることができる意図があると思われます。
+トップページで訴求したいことは次のふたつになると思います。これは華やかな画像をいっぱい見られるようにする意図があると思われます。
 
 
 * コンテストの盛り上がり
@@ -265,7 +265,7 @@
 
 [^creative-commons-article]: http://liskul.com/cr_ccnotrouble-4194
 
-なお画像については特に著作権について言及していません。理由はプロジェクトラブライブ！が著作者となっている画像と、自分達が著作者となっている画像が混ざっているため、一律で画像をどのように使っていいのか決められないためです。
+なお画像は著作権について言及していません。理由はプロジェクトラブライブ！が著作者になる画像と、自分達が著作者になる画像が混ざっているため、一律で画像をどのように使っていいのか決められないためです。
 
 
 ### イラストや素材を自作できない場合どうしたらいいか？
