--- a/test/ch03.md
+++ b/test/ch03.md
@@ -32,7 +32,7 @@
 
 `body`要素内にはこのページの内容を書いていきます。`body`要素内にある`main`要素はサイトの主要な内容を示すものとなります。
 
-なお`main`要素で`role`属性の値に`main`を指定していますが、これはIE11がmain要素をサポートしていない[^html5semantic]ためです。そのため`role`属性で`main`を指定して、サイトの主要な内容ということをIE11にも伝える意図で指定しています。
+なお`main`要素で`role`属性の値に`main`を指定しています。これはIE11がmain要素をサポートしていない[^html5semantic]ためです。そのため`role`属性で`main`を指定して、サイトの主要な内容ということをIE11にも伝える意図で指定しています。
 
 [^html5semantic]: http://caniuse.com/#feat=html5semantic
 
@@ -273,7 +273,7 @@ Bootstrapにはないクラス名を定義する際、リスト4のように`ll-
 ```
 ウィンドウ幅を狭めたときにグローバルナビゲーションの表示が崩れないよう、各ウィンドウ幅ごとにスタイルを定義しておきます。主に要素の内側の余白を細かく定義します（リスト10）。
 
-リスト3.10 ウィンドウ幅を狭めたときに表示が崩れないようにする
+リスト3.10 ウィンドウ幅を狭めたとき表示が崩れないようにする
 ```
 /* グローバルナビゲーションの各ウィンドウ幅ごとのスタイル定義 */
 @media (min-width: 768px) {
