--- a/test/ch04.md
+++ b/test/ch04.md
@@ -271,7 +271,7 @@ CarouselPagination.prototype.deactivatePage = function() {
 
 ## カルーセルが動くようにする
 
-いよいよカルーセルやページネーションが動作するようにします。先ほど実装したカルーセルをリスト13のように呼び出して動くようにします。カルーセルの設定として3項目設定します。
+先ほど実装したカルーセルをリスト13のとおり呼び出して動くようにします。カルーセルの設定として3項目設定します。
 
 
 * autoplay：カルーセルを自動的にページ送りするか
