fix(ch02): 二重助詞を無くした

--- a/test/ch02.md
+++ b/test/ch02.md
@@ -77,7 +77,7 @@
 
 #### 「○○ とは」で検索する
 
-より入門的な内容を探したい場合「○○ とは」で検索するのがいいです。理由は入門的な記事のタイトルが「○○ とは」のように書く傾向にあるためです。たとえばJavaScriptの初心者向け記事を探したい場合「JavaScript とは」といった感じで検索します。
+より入門的な内容を探したい場合「○○ とは」で検索するのがいいです。理由は入門的な記事のタイトルは「○○ とは」のように書く傾向があるためです。たとえばJavaScriptの初心者向け記事を探したい場合「JavaScript とは」といった感じで検索します。
 
 
 #### エラーメッセージで検索する
